force-app/main/default/objects/FNS_FinancialAccount__c/FNS_FinancialAccount__c.object-meta.xml
<CustomObject>
    <label>Financial Product (NonFSC)</label>
    <nameField>
        <label>Financial Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Products (NonFSC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>