force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_Account__c.field-meta.xml
<CustomField>
    <fullName>FNS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Products</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>AccountProducts</relationshipName>
    <type>Lookup</type>
</CustomField>