force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>FinancialAccountApplications</relationshipName>
    <type>Lookup</type>
</CustomField>