force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_CurrencyCode__c</fullName>
    <label>Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>