force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>