force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_FinancialAccountTransaction__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransaction__c</fullName>
    <externalId>true</externalId>
    <label>Loan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>