force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_OriginationTypeIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_OriginationTypeIndicator__c</fullName>
    <label>Origination Type Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>