force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_PaymntType__c.field-meta.xml
<CustomField>
    <fullName>FNS_PaymntType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_PaymentType</valueSetName>
    </valueSet>
</CustomField>