force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_PrimaryOwner__c.field-meta.xml
<CustomField>
   <fullName>FNS_PrimaryOwner__c</fullName>
   <deleteConstraint>SetNull</deleteConstraint>
   <label>Owner</label>
   <referenceTo>Account</referenceTo>
   <relationshipLabel>Financial Accounts (NonFSC) (Primary Owner)</relationshipLabel>
   <relationshipName>ClientFinancialAccounts</relationshipName>
   <type>Lookup</type>
</CustomField>