force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_ProductType__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductType__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_ProductType</valueSetName>
    </valueSet>
</CustomField>