force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_Purpose__c.field-meta.xml
<CustomField>
    <fullName>FNS_Purpose__c</fullName>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Purpose</valueSetName>
    </valueSet>
</CustomField>