force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_RateType__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateType__c</fullName>
    <label>Rate Type (Fixed or Variable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>