force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_RequestedClosingDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_RequestedClosingDate__c</fullName>
    <label>Requested Closing Date</label>
    <type>Date</type>
</CustomField>