force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_RiskType__c.field-meta.xml
<CustomField>
    <fullName>FNS_RiskType__c</fullName>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptances</fullName>
            </value>
            <value>
                <fullName>Acceptances Financing</fullName>
            </value>
            <value>
                <fullName>Acquisition loans</fullName>
            </value>
            <value>
                <fullName>Bankers Acceptance</fullName>
            </value>
            <value>
                <fullName>Bankers Acceptance (Sumitomo) SBLC NB</fullName>
            </value>
            <value>
                <fullName>Bills of Exchange</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Competitive Bids/Money Market Loans</fullName>
            </value>
            <value>
                <fullName>Current account</fullName>
            </value>
            <value>
                <fullName>Debt Instrument</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Discount Loans</fullName>
            </value>
            <value>
                <fullName>Escrow Deposit</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Guidance</fullName>
            </value>
            <value>
                <fullName>Intraday</fullName>
            </value>
            <value>
                <fullName>Letter of Credit - Standby Advised</fullName>
            </value>
            <value>
                <fullName>Letter of Credit - Trade</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Loans - Long Term</fullName>
            </value>
            <value>
                <fullName>Loans - Revolving</fullName>
            </value>
            <value>
                <fullName>Loans Construction</fullName>
            </value>
            <value>
                <fullName>Multi Currency Non-Loan</fullName>
            </value>
            <value>
                <fullName>Non-Loan Guaranty</fullName>
            </value>
            <value>
                <fullName>Repo Loans</fullName>
            </value>
            <value>
                <fullName>SBLC</fullName>
            </value>
            <value>
                <fullName>Swing Lines</fullName>
            </value>
            <value>
                <fullName>Warehouse Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>