force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_SuppCurrencies__c.field-meta.xml
<CustomField>
    <fullName>FNS_SuppCurrencies__c</fullName>
    <label>Supported Currencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_ConfigCurrency</valueSetName>
    </valueSet>
</CustomField>