force-app/main/default/objects/FNS_FinancialAccount__c/fields/FNS_Term__c.field-meta.xml
<CustomField>
    <fullName>FNS_Term__c</fullName>
    <label>Term</label>
    <required>true</required>
    <length>50</length>
    <type>Text</type>
</CustomField>