force-app/main/default/objects/FNS_FinancialAccount__c/recordTypes/FNS_FinancialAccount.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccount</fullName>
    <active>true</active>
    <label>Financial Product</label>
</RecordType>