force-app/main/default/objects/FNS_FinancialAccount__c/recordTypes/FNS_FinancialAccountReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccountReadOnly</fullName>
    <active>true</active>
    <description>This record type will have only read only fields</description>
    <label>Financial Product Read Only</label>
</RecordType>