force-app/main/default/objects/FNS_FinancialAccount__c/listViews/FNS_FinancialAccounts.listView-meta.xml
<ListView>
    <fullName>FNS_FinancialAccounts</fullName>
    <columns>NAME</columns>
    <columns>FNS_Application__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Financial Products</label>
</ListView>