force-app/main/default/objects/FNS_FinancialAccount__c/listViews/FNS_ProductsNonFSC.listView-meta.xml
<ListView>
    <fullName>FNS_ProductsNonFSC</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Products NonFSC</label>
</ListView>